--- a/hugo.toml
+++ b/hugo.toml
@@ -100,13 +100,13 @@ ignoreErrors = ["additional-script-loading-error"] # ignore error of loading add
   description = "My writings on topics ranging from gaming and retro tech, to photography and birding."
 
 # Allow to override webmanifest options
-[Languages.en-gb.params.webmanifest]
-  name = "sitename" # will use "params.sitename" or "title" by default
-  short_name = "sitename" # same as name
-  start_url = "/" # will use homepage url by default
-  theme_color = "#434648" # default is "#434648" (base color of text). Also will override html `<meta name="theme-color" />`
-  background_color = "#fff" # by default depend on "params.defaultColor" for "light" or "auto" will be set to "#fff" for dark will be "#131418" (color of dark mode background)
-  display = "standalone"
+#[Languages.en-gb.params.webmanifest]
+  #name = "Oliver Mitchell" # will use "params.sitename" or "title" by default
+  #short_name = "Oliver Mitchell" # same as name
+  #start_url = "/" # will use homepage url by default
+  #theme_color = "#434648" # default is "#434648" (base color of text). Also will override html `<meta name="theme-color" />`
+  #background_color = "#fff" # by default depend on "params.defaultColor" for "light" or "auto" will be set to "#fff" for dark will be "#131418" (color of dark mode background)
+  #display = "standalone"
 
 ###################################################################
 
